login button radius

--- a/src/auraplayer/Login.html
+++ b/src/auraplayer/Login.html
@@ -108,6 +108,7 @@
             color: #ffffff;
             display: inline-block;
             width: 98.0% !important;
+            border-radius: 30px;
         }
 
         div#infoPopup-placeholder,
